minor alignment fixes and commented out some code to avoid console erors for now

--- a/css/layout.css
+++ b/css/layout.css
@@ -43,7 +43,7 @@ body {
   position: absolute;
   color: black;
   font-size: 2vh;
-  top: 44vh;
+  top: 45vh;
   left: 18vw;
   width: 8vw;
   border-radius: 50%;
@@ -52,7 +52,7 @@ body {
   position: absolute;
   color: black;
   font-size: 2vh;
-  top: 44vh;
+  top: 45vh;
   left: 28vw;
   width: 8vw;
   border-radius: 50%;
